split controller class and add dokumentenstapel endpoint
