# Backend/TheLionKing/src/main/java/de/drv/thelionking/data/entities/seitenextrakt/SeitenExtraktRepository.java
@@ -1,4 +1,4 @@
-package de.drv.thelionking.data.seitenextrakt;
+package de.drv.thelionking.data.entities.seitenextrakt;
 
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.stereotype.Repository;
@@ -10,6 +10,6 @@ import java.util.UUID;
 @Repository
 public interface SeitenExtraktRepository extends CrudRepository<SeitenExtrakt, UUID> {
     Optional<SeitenExtrakt> findBySeite_Id(UUID seiteId);
-    List<SeitenExtrakt> findAllBySeite_Dokumentenstapel_IdOrderBySeite_PageNoAsc(UUID stapelId);
+    List<SeitenExtrakt> findAllBySeite_DokumentenstapelEntity_IdOrderBySeite_PageNoAsc(UUID stapelId);
 }
 
