# Backend/TheLionKing/src/main/java/de/drv/thelionking/data/entities/versicherter/VersicherterRepository.java
@@ -1,4 +1,4 @@
-package de.drv.thelionking.data.versicherter;
+package de.drv.thelionking.data.entities.versicherter;
 
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.stereotype.Repository;
